--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,31 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-08 Thu 11:35]
+#+CAPTION: Clock summary at [2016-12-08 Thu 14:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *45:06* |       |       | 100.0 |
+| *Total time*                                                                | *46:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 45:06   |       |       | 100.0 |
-| Active                                                                      |         | 45:06 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   5.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.3 |
+| Stories                                                                     | 46:42   |       |       | 100.0 |
+| Active                                                                      |         | 46:42 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   5.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.2 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.4 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.2 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.4 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.6 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   9.6 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.8 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  11.7 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  12.7 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.6 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.3 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.5 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   9.3 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.7 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  11.3 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  12.3 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.5 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.7 |
-| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.6 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.5 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.9 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  37.7 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   4.3 |
-| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.2 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  36.4 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   4.2 |
+| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.1 |
+| STARTED Add support for visual studio projects and solutions                |         |       |  1:36 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -442,16 +443,28 @@ Add a new enum for it and update comment formatter with this style.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for visual studio projects and solutions      :story:
+    CLOCK: [2016-12-08 Thu 13:44]--[2016-12-08 Thu 14:20] =>  0:36
+    CLOCK: [2016-12-08 Thu 13:29]--[2016-12-08 Thu 13:44] =>  0:15
+    CLOCK: [2016-12-08 Thu 11:53]--[2016-12-08 Thu 12:21] =>  0:28
     CLOCK: [2016-12-08 Thu 11:35]--[2016-12-08 Thu 11:52] =>  0:17
 
 We need to start compiling the generated code to make sure it is
 valid. For this we need support for solutions and projects.
+
+Notes:
+
+- model needs to have an associated GUID pair to ensure it is stable
+  across code generations. These must be supplied as meta-data.
 
 *** Add msbuild target for C# test model                              :story:
 
 Once we are generating solutions, we should detect msbuild (or xbuild)
 and build the solution. This should be a CMake target that runs on
 Travis.
+
+*** Split the "built-ins" by language                                 :story:
+
+At present we have a had
 
 *** Generate AssemblyInfo in C#                                       :story:
 
