--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,32 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-08 Thu 16:15]
+#+CAPTION: Clock summary at [2016-12-08 Thu 17:27]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *48:34* |       |       | 100.0 |
+| *Total time*                                                                | *49:46* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 48:34   |       |       | 100.0 |
-| Active                                                                      |         | 48:34 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.9 |
+| Stories                                                                     | 49:46   |       |       | 100.0 |
+| Active                                                                      |         | 49:46 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.1 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.4 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.1 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.2 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.4 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   8.9 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.6 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  10.9 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  11.8 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.1 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.3 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   8.7 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.5 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  10.6 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  11.5 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.4 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.7 |
-| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.5 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.4 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.8 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  35.0 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   4.0 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  34.1 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.9 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.1 |
-| STARTED Add support for visual studio projects and solutions                |         |       |  3:28 |   7.1 |
+| STARTED Add support for visual studio projects and solutions                |         |       |  4:40 |   9.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -443,6 +443,7 @@ Add a new enum for it and update comment formatter with this style.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for visual studio projects and solutions      :story:
+    CLOCK: [2016-12-08 Thu 16:15]--[2016-12-08 Thu 17:27] =>  1:12
     CLOCK: [2016-12-08 Thu 15:03]--[2016-12-08 Thu 16:14] =>  1:11
     CLOCK: [2016-12-08 Thu 14:21]--[2016-12-08 Thu 15:02] =>  0:41
     CLOCK: [2016-12-08 Thu 13:44]--[2016-12-08 Thu 14:20] =>  0:36
