--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,33 +12,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-08 Thu 19:34]
+#+CAPTION: Clock summary at [2016-12-08 Thu 20:48]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:19* |       |       | 100.0 |
+| *Total time*                                                                | *51:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:19   |       |       | 100.0 |
-| Active                                                                      |         | 50:19 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.1 |
+| Stories                                                                     | 51:32   |       |       | 100.0 |
+| Active                                                                      |         | 51:32 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.0 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.4 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.1 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.1 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.3 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   8.6 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.5 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  10.5 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  11.4 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.4 |
-| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.7 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   8.4 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.4 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  10.3 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  11.1 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.3 |
+| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.4 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.8 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  33.8 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.9 |
-| STARTED OSX build is borked                                                 |         |       |  0:21 |   0.7 |
-| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.1 |
-| STARTED Add support for visual studio projects and solutions                |         |       |  4:52 |   9.7 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  33.0 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.8 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  11.8 |
+| COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.7 |
+| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -437,7 +437,29 @@ Formatters at present does not support C# documentation. Sample ([[https://githu
 
 Add a new enum for it and update comment formatter with this style.
 
-*** STARTED OSX build is borked
+*** COMPLETED Add support for visual studio projects and solutions    :story:
+    CLOSED: [2016-12-08 Thu 20:48]
+    CLOCK: [2016-12-08 Thu 19:34]--[2016-12-08 Thu 20:47] =>  1:13
+    CLOCK: [2016-12-08 Thu 17:37]--[2016-12-08 Thu 17:42] =>  0:05
+    CLOCK: [2016-12-08 Thu 17:29]--[2016-12-08 Thu 17:36] =>  0:07
+    CLOCK: [2016-12-08 Thu 16:15]--[2016-12-08 Thu 17:27] =>  1:12
+    CLOCK: [2016-12-08 Thu 15:03]--[2016-12-08 Thu 16:14] =>  1:11
+    CLOCK: [2016-12-08 Thu 14:21]--[2016-12-08 Thu 15:02] =>  0:41
+    CLOCK: [2016-12-08 Thu 13:44]--[2016-12-08 Thu 14:20] =>  0:36
+    CLOCK: [2016-12-08 Thu 13:29]--[2016-12-08 Thu 13:44] =>  0:15
+    CLOCK: [2016-12-08 Thu 11:53]--[2016-12-08 Thu 12:21] =>  0:28
+    CLOCK: [2016-12-08 Thu 11:35]--[2016-12-08 Thu 11:52] =>  0:17
+
+We need to start compiling the generated code to make sure it is
+valid. For this we need support for solutions and projects.
+
+Notes:
+
+- model needs to have an associated GUID pair to ensure it is stable
+  across code generations. These must be supplied as meta-data.
+
+*** COMPLETED OSX build is borked                                     :story:
+    CLOSED: [2016-12-08 Thu 20:48]
     CLOCK: [2016-12-08 Thu 19:29]--[2016-12-08 Thu 19:33] =>  0:04
     CLOCK: [2016-12-08 Thu 19:11]--[2016-12-08 Thu 19:28] =>  0:17
 
@@ -466,25 +488,6 @@ According to this SO post, seems like we're missing a string include:
 
 - try using ICU DecNumber library.
 - check compiler support (MSVC may have decimals; if so, use that instead)
-
-*** STARTED Add support for visual studio projects and solutions      :story:
-    CLOCK: [2016-12-08 Thu 17:37]--[2016-12-08 Thu 17:42] =>  0:05
-    CLOCK: [2016-12-08 Thu 17:29]--[2016-12-08 Thu 17:36] =>  0:07
-    CLOCK: [2016-12-08 Thu 16:15]--[2016-12-08 Thu 17:27] =>  1:12
-    CLOCK: [2016-12-08 Thu 15:03]--[2016-12-08 Thu 16:14] =>  1:11
-    CLOCK: [2016-12-08 Thu 14:21]--[2016-12-08 Thu 15:02] =>  0:41
-    CLOCK: [2016-12-08 Thu 13:44]--[2016-12-08 Thu 14:20] =>  0:36
-    CLOCK: [2016-12-08 Thu 13:29]--[2016-12-08 Thu 13:44] =>  0:15
-    CLOCK: [2016-12-08 Thu 11:53]--[2016-12-08 Thu 12:21] =>  0:28
-    CLOCK: [2016-12-08 Thu 11:35]--[2016-12-08 Thu 11:52] =>  0:17
-
-We need to start compiling the generated code to make sure it is
-valid. For this we need support for solutions and projects.
-
-Notes:
-
-- model needs to have an associated GUID pair to ensure it is stable
-  across code generations. These must be supplied as meta-data.
 
 *** Add msbuild target for C# test model                              :story:
 
