--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-09 Fri 10:18]
+#+CAPTION: Clock summary at [2016-12-09 Fri 10:27]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *53:12* |       |       | 100.0 |
+| *Total time*                                                                | *53:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 53:12   |       |       | 100.0 |
-| Active                                                                      |         | 53:12 |       | 100.0 |
+| Stories                                                                     | 53:20   |       |       | 100.0 |
+| Active                                                                      |         | 53:20 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.9 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -34,12 +34,12 @@
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.3 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.8 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  31.9 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  31.8 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.7 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  11.4 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.7 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.2 |
-| STARTED Mapping of language namespaces to modeling element locations        |         |       |  0:31 |   1.0 |
+| STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.2 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -496,6 +496,7 @@ At present we are ignoring facet directories. Read them from the meta
 data and place items in the correct locations.
 
 *** STARTED Language namespaces and modeling element locations        :story:
+    CLOCK: [2016-12-09 Fri 10:19]--[2016-12-09 Fri 10:27] =>  0:08
     CLOCK: [2016-12-09 Fri 10:13]--[2016-12-09 Fri 10:18] =>  0:05
     CLOCK: [2016-12-09 Fri 09:46]--[2016-12-09 Fri 10:12] =>  0:26
 
@@ -542,6 +543,13 @@ is because in these languages, folders are supposed to correspond to
 namespaces. In C# this is largely optional, but in Java it is
 mandatory. Thus we need some way of injecting the facet directories as
 internal modules before we code generate.
+
+Actually this is non-trivial; all references to types will now have to
+concern themselves with the facet. For example, say test data
+generator is referring to the domain type; this now needs to be
+qualified correctly, as they are in different namespaces. This
+requires quite a bit of thinking in order to generate compilable
+code.
 
 Tasks:
 
