--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-09 Fri 14:07]
+#+CAPTION: Clock summary at [2016-12-09 Fri 14:11]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:06* |       |       | 100.0 |
+| *Total time*                                                                | *56:09* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:06   |       |       | 100.0 |
-| Active                                                                      |         | 56:06 |       | 100.0 |
+| Stories                                                                     | 56:09   |       |       | 100.0 |
+| Active                                                                      |         | 56:09 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.8 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -34,7 +34,7 @@
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.3 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.7 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  30.3 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  30.3 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.5 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.8 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
@@ -43,7 +43,7 @@
 | STARTED Split the "built-ins" by language                                   |         |       |  0:28 |   0.8 |
 | STARTED Models should have an associated language                           |         |       |  2:06 |   3.7 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.2 |
-| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.0 |
+| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -362,6 +362,7 @@ move it up into yarn.
 
 *** COMPLETED Add basic infrastructure for C#                         :story:
     CLOSED: [2016-12-08 Thu 09:13]
+    CLOCK: [2016-12-09 Fri 14:08]--[2016-12-09 Fri 14:11] =>  0:03
     CLOCK: [2016-12-07 Wed 23:18]--[2016-12-07 Wed 23:38] =>  0:20
     CLOCK: [2016-12-07 Wed 22:55]--[2016-12-07 Wed 23:17] =>  0:22
     CLOCK: [2016-12-07 Wed 22:25]--[2016-12-07 Wed 22:54] =>  0:29
